# SocketMixins

./: readme.md
messaging/: CMakeLists.txt  configure.sh
messaging/src/: error.pb.cc  packet.pb.cc
mixins/: filter.h  nodeConfig.h  pubMixin.h  pullMixin.h  pushMixin.h  subMixin.h  testServer.h
parser/include/: error.pb.h  packet.h  packet.pb.h  sample-data.pb.h
parser/protobuf/: packet.proto
parser/src/: sample-data.pb.cc
protobuf/: error.proto
public/: CMakeLists.txt
public/include/: baseHandler.h  filter.h  pubMixin.h  replyMixin.h  requestMixin.h  subMixin.h  testClient.h
public/include/protobuf/: sample-data.proto
public/protobuf/: packet.pb.cc  packet.pb.h
user/app1/: main.cpp  run.sh  sample-client.h
user/app2/: sample-server.h
user/protobuf/: sample-data.proto
utils/: gen-filter-code.py
zmqSampleClient/: CMakeLists.txt  sample-client.cpp
zmqSampleServer/: CMakeLists.txt  main.cpp  run.sh  sample-server.cpp
